refactor: minor chqnges (JAVA 8)